@startuml
title:SuperStore logical data model

entity fact_orders {
    pk_id <<PK>>
    --
    pk_bk_id
    fk_order_date_id <<FK>>
    fk_ship_date_id <<FK>>
    fk_ship_mode_id <<FK>>
    fk_customer_id <<FK>>
    fk_address_id <<FK>>
    sales 
    quantity
    discount
    profit  
    isreturned  
}


entity dim_products {
    pk_id <<PK>>
    --
    pk_bk_id
    name
    category
    subcategory
}

entity dim_ship_modes {
    pk_id <<PK>>
    --
    name
}

entity dim_customers {
    pk_id <<PK>>
    --
    pk_bk_id
    name
    segment
}

entity dim_addresses {
    pk_id <<PK>>
    --
    postal_code
    country
    city
    state
    region
    manager
}

entity dim_dates {
    pk_id <<PK>>
    --
    date
    year
    quarter
    month_name
    month_number
    week
    weekday_name
    weekday_number
    isweekend
}

fact_orders}|--||dim_customers
fact_orders}|-right-||dim_addresses
fact_orders}|-up-||dim_products
fact_orders}|-left-||dim_dates
fact_orders}|-left-||dim_dates
fact_orders}|--||dim_ship_modes


@enduml